# AutoSpaceTrader

./: .gitignore  Cargo.toml
auto-space-trader/: Cargo.toml
auto-space-trader/src/: main.rs
client/: README.md
client/src/apis/: systems_api.rs
client/src/models/: agent.rs  contract_payment.rs  contract_terms.rs  get_system_waypoints_traits_parameter.rs  jump_gate.rs  jump_ship_200_response_data.rs  market_transaction.rs  scanned_waypoint.rs  ship_nav.rs  ship_nav_route.rs  ship_nav_route_waypoint.rs  shipyard_ship.rs  shipyard_ship_types_inner.rs  shipyard_transaction.rs  supply_construction_201_response.rs  supply_construction_201_response_data.rs  waypoint.rs  waypoint_modifier.rs  waypoint_modifier_symbol.rs
src/: client.rs  configuration.rs  limiter.rs  main.rs  manager.rs  setup.rs  ship.rs
