[package]
name = "auto-space-trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.68"
chrono = "0.4.24"
dotenv = "0.15.0"
futures = "0.3.28"
reqwest = "0.11.17"
reqwest-middleware = "0.2.1"
serde = { version = "1.0.162", features = ["derive"] }
serde-attributes = "0.2.1"
serde_json = "1.0.96"
serde_repr = "0.1.12"
spacedust = "1.0.5"
task-local-extensions = "0.1.4"
tokio = { version = "1.28.0", features = ["full"] }
