[package]
name = "auto-space-trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.68"
chrono = "0.4.24"
dotenv = "0.15.0"
fern = "0.6.2"
futures = "0.3.28"
humantime = "2.1.0"
lazy_static = "1.4.0"
log = "0.4.17"
reqwest = "0.11.17"
reqwest-middleware = "0.2.1"
reqwest-retry = "0.2.2"
serde = { version = "1.0.162", features = ["derive"] }
serde-attributes = "0.2.1"
serde_json = "1.0.96"
serde_repr = "0.1.12"
spacedust = "1.0.5"
task-local-extensions = "0.1.4"
tokio = { version = "1.28.0", features = ["full"] }
