[package]
name = "auto-space-trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.77"
chrono = "0.4.31"
dotenv = "0.15.0"
fern = "0.6.2"
futures = "0.3.30"
humantime = "2.1.0"
lazy_static = "1.4.0"
log = "0.4.20"
reqwest = "0.11.23"
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
serde = { version = "1.0.195", features = ["derive"] }
serde-attributes = "0.2.1"
serde_json = "1.0.111"
serde_repr = "0.1.18"
spacedust = { path = "client" }
task-local-extensions = "0.1.4"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
rand = "0.8.5"
